# scribus-plugin-actionSearch

./: README.md
msvc2015/actionsearch/: actionsearch.vcxproj  actionsearch.vcxproj.filters
src/: CMakeLists.txt  actionsearch.cpp  actionsearch.h  plugin.cpp  plugin.h
src/ui/: dialog.cpp  dialog.h
