INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(SCRIBUS_ACTIONSEARCH_PLUGIN_UI_SRC
  ui/actionsearchdialog.ui
)

SET(SCRIBUS_ACTIONSEARCH_PLUGIN_MOC_CLASSES
  plugin.h
  actionsearch.h
  ui/dialog.h
)

SET(SCRIBUS_ACTIONSEARCH_PLUGIN_SOURCES
  plugin.cpp
  actionsearch.cpp
  ui/dialog.cpp
)

SET(SCRIBUS_ACTIONSEARCH_PLUGIN "actionsearchplugin")

QT5_WRAP_UI(SCRIBUS_ACTIONSEARCH_PLUGIN_UI_SOURCES ${SCRIBUS_ACTIONSEARCH_PLUGIN_UI_SRC} )
QT5_WRAP_CPP(SCRIBUS_ACTIONSEARCH_PLUGIN_MOC_SOURCES ${SCRIBUS_ACTIONSEARCH_PLUGIN_MOC_CLASSES})

ADD_LIBRARY(${SCRIBUS_ACTIONSEARCH_PLUGIN} MODULE ${SCRIBUS_ACTIONSEARCH_PLUGIN_SOURCES} ${SCRIBUS_ACTIONSEARCH_PLUGIN_MOC_SOURCES} ${SCRIBUS_ACTIONSEARCH_PLUGIN_UI_SOURCES})

TARGET_LINK_LIBRARIES(${SCRIBUS_ACTIONSEARCH_PLUGIN} ${PLUGIN_LIBRARIES})

INSTALL(TARGETS ${SCRIBUS_ACTIONSEARCH_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)

ADD_DEPENDENCIES(${SCRIBUS_ACTIONSEARCH_PLUGIN} ${EXE_NAME})
